--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,53 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
+body {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  display: block;
+  width: 100%;
 }
 
-.App-link {
-  color: #61dafb;
+.inputPanel {
+  display: block;
+  width: 60%;
+  padding: 20%;
+  padding-top: 50px;
+  padding-bottom: 0;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.inputPanel button {
+  width: 100%;
+}
+
+.inputPanel textarea {
+  width: 99%;
+  resize: vertical;
+}
+
+p,
+button {
+  font-size: medium;
+}
+
+.region {
+  background-color: #444a55;
+  border-radius: 10px;
+  padding: 15px;
+  padding-top: 1px;
+}
+
+ul {
+  padding: 5%;
+  padding-top: 0;
+  padding-bottom: 0;
+}
+
+.block {
+  list-style: none;
+  display: inline-block;
+  width: 100%;
+  margin-bottom: 20px;
 }
